; ModuleID = '/home/carl/AnghaBench/reactos/drivers/network/afd/afd/extr_tdiconn.c_TaLengthOfAddress.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/network/afd/afd/extr_tdiconn.c_TaLengthOfAddress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@MID_TRACE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"AddrLen %x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @TaLengthOfAddress(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  store i64 %7, i64* %4, align 8
  %8 = load i64, i64* %4, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i64 0, i64* %2, align 8
  br label %19

11:                                               ; preds = %1
  %12 = load i64, i64* %4, align 8
  %13 = add i64 %12, 8
  store i64 %13, i64* %4, align 8
  %14 = load i32, i32* @MID_TRACE, align 4
  %15 = load i64, i64* %4, align 8
  %16 = inttoptr i64 %15 to i8*
  %17 = call i32 @AFD_DbgPrint(i32 %14, i8* %16)
  %18 = load i64, i64* %4, align 8
  store i64 %18, i64* %2, align 8
  br label %19

19:                                               ; preds = %11, %10
  %20 = load i64, i64* %2, align 8
  ret i64 %20
}

declare dso_local i32 @AFD_DbgPrint(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
